# nvim-matrix-bot

./: .env.example  Cargo.toml  Procfile  README.md  commands.json  rust-toolchain  rust-toolchain.toml
.github/workflows/: tags.yml  test.yml
src/: command.rs  config.rs  gif.rs  help.rs  main.rs  tag_search.rs  tags
