cargo-features = ["strip"]

[package]
name = "nvim-matrix-bot"
version = "0.2.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true

[dependencies]
ureq = "2.3.0"
serde_json = "1.0.69"
fancy-regex = "0.7.1" # Used over `regex` for the look-around support
pulldown-cmark = "0.9.0"