[package]
name = "nvim-matrix-bot"
version = "0.2.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
ureq = "2.3.0"
serde_json = "1.0.69"
fancy-regex = "0.7.1" # Used over `regex` for the look-around support
pulldown-cmark = "0.9.0"
lazy_static = "1.4.0"
# Just 'cuz I'm being lazy and haven't converted some Lua patterns to actual regex
lua-patterns = "0.4.0"
